# marketplace

./: .gitignore  API_EXAMPLES.md  ARCHITECTURE.md  CHECKLIST.md  MONGODB_CHECKLIST.md  MONGODB_GUIDE.md  MONGODB_MIGRATION.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  START_HERE.md  start.bat
backend/: .env.example  Cargo.toml  init_mongodb.js
backend/src/: auth.rs  db.rs  main.rs  models.rs
backend/src/handlers/: auth.rs  bookings.rs  mod.rs  niche.rs  products.rs  purchases.rs  reviews.rs  services.rs
frontend/: index.html
frontend/css/: styles.css
frontend/js/: digital.js  niche.js  services.js
frontend/pages/: admin.html  digital.html  niche.html  services.html
